# eoir

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cleancsv.py  cleancsv_refactor.md  docker-compose.yml  main.py  pyproject.toml  run  tx.py
.github/workflows/: publish.yml  test.yml
eoir_foia/: settings.py
eoir_foia/cli/: clean.py  db.py  download.py
eoir_foia/core/: csv.py  db.py  download.py
legacy/: cleancsv.py  cmd_db.py
src/eoir/: __version__.py  main.py  settings.py
src/eoir/cli/: db.py  pipeline.py
src/eoir/core/: clean.py  csv.py  db.py  download.py  models.py  parallel.py
src/eoir/logging/: handlers.py
src/eoir/metadata/: foia_tables.sql
src/eoir/metadata/json/: decode.json
src/eoir/metadata/json/table-dtypes/: D_TblAssociatedBond.json
src/eoir_foia/: __init__.py  main.py  settings.py
src/eoir_foia/cli/: clean.py  config.py  db.py  download.py
src/eoir_foia/core/: clean.py  config.py  csv.py  db.py  db_utils.py  download.py  models.py  parallel.py
src/eoir_foia/logging/: __init__.py  handlers.py
src/eoir_foia/metadata/: tables.py
